fixed syntax in prli

--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -391,7 +391,7 @@ excepción por índice fuera de rango (línea 14). Debido a su estrategia de
 \emph{feedback-directed random testing}, Randoop descarta esa secuencia
 fallida y deja de ampliarla (línea 16). Solo las secuencias que ejecutan sin fallos
 se siguen extendiendo, guiando así la exploración de las secuencias de la
-API~\cite{Pacheco07,Pacheco08}.
+API \cite{Pacheco07,Pacheco08}.
 
 
 \cacho{Hasta aca}
@@ -468,7 +468,7 @@ Los criterios de cobertura tradicionales proveen formas relativamente sencillas 
 la calidad de una suite de tests, debido a que típicamente hay una alta correlación entre
 la satisfacción de los criterios y la capacidad de detección de defectos de la
 suite \cite{Ammann16,just2014mutants}. 
-En particular, Just et al.~\cite{just2014mutants} muestran que existe una fuerte
+En particular, Just et al. \cite{just2014mutants} muestran que existe una fuerte
 correlación entre la detección de mutantes y la detección de fallas reales, lo
 que respalda el uso de la mutación como sustituto práctico para evaluar la
 eficacia de un conjunto de tests.
