fixed tables about jpf

--- a/tables/tableJPFBuilders.tex
+++ b/tables/tableJPFBuilders.tex
@@ -3,12 +3,12 @@
 \scriptsize
 \begin{tabular}{ c| l| c c c c c}
 \hline
-Class & Method & Scope &
+Clase & Método & Scope &
 \multicolumn{2}{c}{\textsf{MGO}} &
 \multicolumn{2}{c}{\textsf{API}} \\
 &&&
-\tiny{\textbf{states}} & \tiny{\textbf{time (S)}} &
-\tiny{\textbf{states}} & \tiny{\textbf{time (S)} }\\
+\tiny{\textbf{estados}} & \tiny{\textbf{tiempo (S)}} &
+\tiny{\textbf{estdaods}} & \tiny{\textbf{tiempo (S)} }\\
 \hline
 \multirow{14}{*}{LinkedList} 
 & add
