--- a/tables/tableJPFBuilders1.tex
+++ b/tables/tableJPFBuilders1.tex
@@ -2,12 +2,12 @@
 \scriptsize
 \begin{tabular}{ c| l| c c c c c}
 \hline
-Class & Method & Scope &
+Clase & Método & Scope &
 \multicolumn{2}{c}{\textsf{MGO}} &
 \multicolumn{2}{c}{\textsf{API}} \\
 &&&
-\tiny{\textbf{states}} & \tiny{\textbf{time (S)}} &
-\tiny{\textbf{states}} & \tiny{\textbf{time (S)} }\\
+\tiny{\textbf{estados}} & \tiny{\textbf{tiempo (S)}} &
+\tiny{\textbf{estados}} & \tiny{\textbf{tiempo (S)} }\\
 \hline
 \multirow{11}{*}{HashMap} 
 & put
@@ -56,7 +56,7 @@ Class & Method & Scope &
 \end{tabular}%
 \caption{Tiempo de ejecución y estados explorados por JPF utilizando los
 enfoques API y MGO para construir los drivers.}
-\label{tab:results-jpf2}
+\label{tab:results-jpf1}
  
 \end{table}
 
