added books cite in intro

--- a/introduccion.tex
+++ b/introduccion.tex
@@ -7,7 +7,7 @@
 % Software \cite{}. Por ejemplo, la generación automática de tests \cite{} y la verificación \cite{} son muy efectivos para encontrar defectos en el software.
 
 
-En la actualidad, el software está presente en casi todos los aspectos de la vida diaria, desde sistemas críticos en la industria aeronáutica y en salud, hasta aplicaciones móviles de uso cotidiano \cite{Pressman} \pp{Libros de ingenieria de software} La evolución de la tecnología y su integración en nuestra sociedad han hecho que la calidad del software sea un factor clave en el desarrollo tecnológico. La ingeniería de software es una disciplina fundamental en el desarrollo y construcción de sistemas de software complejos y de alta calidad \cite{sommerville2016,pressman2019}. 
+En la actualidad, el software está presente en casi todos los aspectos de la vida diaria, desde sistemas críticos en la industria aeronáutica y en salud, hasta aplicaciones móviles de uso cotidiano \cite{pressman2019,sommerville2016}. La evolución de la tecnología y su integración en nuestra sociedad han hecho que la calidad del software sea un factor clave en el desarrollo tecnológico. La ingeniería de software es una disciplina fundamental en el desarrollo y construcción de sistemas de software complejos y de alta calidad \cite{sommerville2016,pressman2019}. 
 %A medida que la tecnología ha avanzado, el software se ha vuelto omnipresente en nuestra vida cotidiana. 
 A medida que el software se vuelve ubicuo gracias a los rápidos avances en
 tecnología, garantizar la corrección funcional del software es más crucial que
